debug typescript tests

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "hardhat-project",
+  "scripts": {
+    "testhh": "yarn hardhat test --no-compile"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.1",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
