upgraded versions of packages so they were self consistent added emit test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,13 @@
   "compilerOptions": {
     "target": "es2018",
     "module": "commonjs",
-    "strict": true,
     "esModuleInterop": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
     "outDir": "dist",
-    "declaration": true
+    "declaration": true,
+    "resolveJsonModule": true
   },
-  "include": ["./scripts", "./test", "./typechain"],
+  "include": ["./scripts", "./test", "./typechain-types"],
   "files": ["./hardhat.config.ts"]
 }
