--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@ yarn-error.log*
 lerna-debug.log*
 
 .idea
-typechain
+# typechain type declarations
+typechain-types/
+typechain/
 
 #Hardhat files
 cache
