--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "hardhat-project",
+  "name": "bao-baskets-hardhat",
   "scripts": {
     "testhh": "yarn hardhat test --no-compile"
   },
   "devDependencies": {
+    "@ethersproject/abi": "^5.7.0",
+    "@ethersproject/bytes": "^5.7.0",
+    "@ethersproject/providers": "^5.7.2",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.1",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
-    "@nomiclabs/hardhat-etherscan": "^2.1.3",
-    "@typechain/ethers-v5": "^7.0.1",
-    "@typechain/hardhat": "^2.3.0",
+    "@nomicfoundation/hardhat-verify": "^1.0.3",
+    "@typechain/ethers-v6": "^0.4.0",
+    "@typechain/hardhat": "^8.0.0",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.4.13",
@@ -25,16 +28,16 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
-    "ethers": "^5.0.0",
+    "ethers": "^6.6.2",
     "hardhat": "^2.16.1",
     "hardhat-gas-reporter": "^1.0.4",
     "mocha": "^10.2.0",
     "prettier": "^2.3.2",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
     "solhint": "^3.3.6",
-    "solidity-coverage": "^0.7.16",
+    "solidity-coverage": "^0.8.4",
     "ts-node": "^10.1.0",
-    "typechain": "^5.1.2",
+    "typechain": "^8.2.0",
     "typescript": "^4.3.5"
   },
   "packageManager": "yarn@3.6.1"
