--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@ lerna-debug.log*
 cache
 artifacts
 
+# foundry files
+cache_hardhat
+out
+forge-cache
+bin/test/
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
