--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ethers": "^6.6.2",
     "hardhat": "^2.16.1",
     "hardhat-gas-reporter": "^1.0.4",
+    "hardhat-preprocessor": "^0.1.5",
     "mocha": "^10.2.0",
     "prettier": "^2.3.2",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
