--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,4 +11,6 @@
     "editor.defaultFormatter": "JuanBlanco.solidity"
   },
   "solidity.formatter": "forge",
+  "coverage-gutters.showGutterCoverage": false,
+  "coverage-gutters.showLineCoverage": true,
 }
