got hardhat working again added some foundry tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "runtimeExecutable": "yarn",
             "runtimeArgs": [
                 "testhh",
-                "${workspaceFolder}/test/LendingRegistry.ts"
+                "${file}"
             ]
         }
     ]
