--- a/foundry.toml
+++ b/foundry.toml
@@ -3,6 +3,14 @@ src = 'contracts'
 out = 'artifacts'
 libs = ['node_modules', 'lib']
 test = 'test/foundry'
-cache_path  = 'forge-cache'
+cache_path = 'forge-cache'
+
+
+# put this in the ~/.foundry/foundry.toml file
+#eth_rpc_url = 'https://eth-mainnet.g.alchemy.com/v2/lQ2dW5O1Il2p992zzaU5iVs_1Vgf-ABm'
+
+#[rpc_endpoints]
+#alchemy = 'https://eth-mainnet.g.alchemy.com/v2/lQ2dW5O1Il2p992zzaU5iVs_1Vgf-ABm'
+
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
