--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/forge-std"]
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/DateUtils"]
+	path = lib/DateUtils
+	url = https://github.com/rootminus0x1/DateUtils
