--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/DateUtils"]
 	path = lib/DateUtils
 	url = https://github.com/rootminus0x1/DateUtils
+[submodule "solidity-scripting/lib/forge-std"]
+	path = solidity-scripting/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
