--- a/foundry.toml
+++ b/foundry.toml
@@ -3,12 +3,13 @@ src = "src"
 out = "out"
 libs = ["lib"]
 optimizer = true
-optimizer_runs = 100000
+optimizer_runs = 10000
 gas_reports = ["*"]
 gas_limit = "18446744073709551615" # u64::MAX i.e. highest
 
 [rpc_endpoints]
-sepolia = "${SEPOLIA_RPC_URL}"
+#sepolia = "${SEPOLIA_RPC_URL}"
 
 [etherscan]
-sepolia = { key = "${ETHERSCAN_API_KEY}" }
+#sepolia = { key = "${ALCHEMY_SEPOLIA_KEY}", chain = 11155111, url = 'https://sepolia.etherscan.io' }
+mainnet = { key = "${ETHERSCAN_KEY}" }
